--- a/main.css
+++ b/main.css
@@ -18,4 +18,9 @@
 	   background-size: 300% 300%;
 	   background-position: 0% 0%;
     	}
+
+	.navbar-dark .navbar-toggler {
+    		color: rgba(51, 156, 94, .5);
+    		border-color: rgba(51, 156, 94, .1);
+	}
 }
