--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
     body {
-    	background: linear-gradient(black, black, white, black, black, white);
+    	background: linear-gradient(rgba(51, 156, 94, .5), rgba(51, 156, 94, .5), rgb(255, 224, 0), rgba(51, 156, 94, .5), rgba(51, 156, 94, .5), rgb(255, 224, 0));
     	background-size: 300% 300%;
     	animation: gradient 15s ease infinite;
     }
