--- a/main.css
+++ b/main.css
@@ -23,4 +23,16 @@
     		color: rgba(51, 156, 94, .5);
     		border-color: rgba(51, 156, 94, .1);
 	}
-}
+	.btn-primary{
+		position: relative;
+		animation: movebtn 4s ease;
+		background-color: white;
+		margin-right: 10px;
+		margin-left: 10px;
+		border: 5px solid black;
+		color: black;
+	}
+	.btn-primary:hover {
+		background-color: black;
+		border: 5px solid white;}
+	}
