--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     	background-size: 300% 300%;
     	animation: gradient 15s ease infinite;
     }
-    
+
     @keyframes gradient {
     	0% {
     		background-size: 300% 300%;
@@ -17,22 +17,36 @@
 	100% {
 	   background-size: 300% 300%;
 	   background-position: 0% 0%;
-    	}
+	 }
+    }
 
-	.navbar-dark .navbar-toggler {
-    		color: rgba(51, 156, 94, .5);
-    		border-color: rgba(51, 156, 94, .1);
+    .navbar-dark .navbar-toggler {
+    	color: rgba(51, 156, 94, .5);
+    	border-color: rgba(51, 156, 94, .1);
+    }
+	    
+    @keyframes movebtn {
+    	0%{ 
+		left: 0px;
+		top: 1200px;
 	}
-	.btn-primary{
-		position: relative;
-		animation: movebtn 4s ease;
-		background-color: white;
-		margin-right: 10px;
-		margin-left: 10px;
-		border: 5px solid black;
-		color: black;
+	100%{
+		left: 0px;
+		top: 0px;
+	}
+    }    
+	    
+    .btn-primary{
+    	 position: relative;
+    	 animation: movebtn 4s ease;
+     	 background-color: white;
+	 margin-right: 10px;
+	 margin-left: 10px;
+	 border: 5px solid black;
+	 color: black;
 	}
 	.btn-primary:hover {
 		background-color: black;
-		border: 5px solid white;}
+		border: 5px solid white;
+	}
 	}
