--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
     }
 
     .navbar{
-    	color: rgba(51, 156, 94, .5);
+    	background-color: rgba(51, 156, 94, .5);
     	border-color: rgba(51, 156, 94, .1);
     }
 	    
@@ -37,16 +37,15 @@
     }    
 	    
     .btn-primary{
-    	 position: relative;
-    	 animation: movebtn 4s ease;
-     	 background-color: white;
+    	 background-color: rgb(51, 156, 94);
 	 margin-right: 10px;
 	 margin-left: 10px;
-	 border: 5px solid black;
-	 color: black;
-	}
-	.btn-primary:hover {
-		background-color: black;
+	 color: rgb(255, 224, 0);
+	 border-weight: 500px;
+     	 border-color: rgb(255, 224, 0);
+    }
+    .btn-primary:hover {
+	background-color: black;
 		border: 5px solid white;
 	}
 	}
