--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
     body {
-    	background: linear-gradient(rgba(51, 156, 94, .5), rgba(51, 156, 94, .5), rgb(255, 224, 0), rgba(51, 156, 94, .5), rgba(51, 156, 94, .5), rgb(255, 224, 0));
+    	background: linear-gradient(rgb(51, 156, 94), rgb(51, 156, 94), rgb(255, 224, 0),rgb(51, 156, 94), rgb(51, 156, 94), rgb(255, 224, 0), rgb(255, 224, 0));
     	background-size: 300% 300%;
     	animation: gradient 15s ease infinite;
     }
@@ -41,11 +41,11 @@
 	 margin-right: 10px;
 	 margin-left: 10px;
 	 color: rgb(255, 224, 0);
-	 border: 10px solid rgb(255, 224, 0);
+	 border: 5px solid rgb(255, 224, 0);
     }
     .btn-primary:hover {
 	background-color: rgb(255, 224, 0);
 	color: rgb(51, 156, 94);
-	border: 10px solid rgb(51, 156, 94);
+	border: 5px solid rgb(51, 156, 94);
 	}
      }
