--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@
     }    
 	    
     .btn-primary{
-    	 background-color: rgb(51, 156, 94);
+     background-color: rgb(51, 156, 94);
 	 margin-right: 10px;
 	 margin-left: 10px;
 	 color: rgb(255, 224, 0);
@@ -49,4 +49,6 @@
 	color: rgb(51, 156, 94);
 	border: 5px solid rgb(51, 156, 94);
 	}
-     }
+	h1{
+		color: red;
+	}
