--- a/main.css
+++ b/main.css
@@ -52,3 +52,15 @@
 	h1{
 		color: red;
 	}
+	
+	.carousel{
+	    margin: 0 auto;
+	    margin-top: 100px;
+	    height: 100vh;
+	    min-height: 350px;
+	    background: no-repeat center center scroll;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    -o-background-size: cover;
+	    background-size: cover;
+}
