--- a/main.css
+++ b/main.css
@@ -54,10 +54,8 @@
 	}
 	
 	.carousel{
-	    margin: 0 auto;
-	    margin-top: 100px;
-	    height: 100vh;
 	    min-height: 350px;
+	    max-height: 350px;
 	    background: no-repeat center center scroll;
 	    -webkit-background-size: cover;
 	    -moz-background-size: cover;
