--- a/main.css
+++ b/main.css
@@ -54,8 +54,11 @@
 	}
 	
 	.carousel{
-	    min-height: 350px;
-	    max-height: 350px;
+	margin: 0 auto;
+    margin-top: 100px;
+    position: relative;
+        overflow: hidden;
+	    height: 350px;
 	    background: no-repeat center center scroll;
 	    -webkit-background-size: cover;
 	    -moz-background-size: cover;
