--- a/main.css
+++ b/main.css
@@ -40,14 +40,14 @@
     .posk {
      z-index: 100;
     	position: fixed;
-    	over-flow
+    	overflow: hidden;
     	top: 0;
     	width: 100%;
     }
 	    
     .btn-primary{
      background-color: rgb(51, 156, 94);
-	 margin-right: 1%
+	 margin-right: 1%;
 	 margin-left: 1%;
 	 color: rgb(255, 224, 0);
 	 border: 5px solid rgb(255, 224, 0);
@@ -62,7 +62,7 @@
 	}
 	
 	.carousel{
-    position: absolute;
+	position: relative;
         overflow: hidden;
 	    height: auto;
 	    width: auto;
