--- a/main.css
+++ b/main.css
@@ -20,10 +20,9 @@
 	 }
     }
 
-    .bg-dark{
+    .custom-color{
 	animation: movebtn 4s ease;
-    	background-color: rgba(51, 156, 94, .5);
-    	border-color: rgba(51, 156, 94, .1);
+    	background-color: rgb(51, 156, 94);
     }
 	    
     @keyframes movebtn {
