--- a/main.css
+++ b/main.css
@@ -69,4 +69,6 @@
 	    -moz-background-size: cover;
 	    -o-background-size: cover;
 	    background-size: cover;
+	    margin-right: 15%;
+	    margin-left 15%;
 }
