--- a/main.css
+++ b/main.css
@@ -70,5 +70,5 @@
 	    -o-background-size: cover;
 	    background-size: cover;
 	    margin-right: 15%;
-	    margin-left 15%;
+	    margin-left: 15%;
 }
