--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -1,7 +1,4 @@
-header {
-    background: #339C5E;
-  }
-  
+
   header::after {
     content:'';
     display: table;
@@ -14,9 +11,6 @@ header {
     height: 5%;
   }
   
-  nav {
-      float: left;
-  }
   nav ul {
       margin: 0;
       padding: 0;
@@ -60,7 +54,6 @@ header {
     nav a:hover::before {
       width: 100%;
   }
-  .coloring {
-
-   background-color: yellow;
-  }
+.bg-dark {
+    background-color: #339C5E!important;
+}
