--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -54,6 +54,20 @@
     nav a:hover::before {
       width: 100%;
   }
+
+  .navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: .3rem 1rem;
+}
+
 .bg-dark {
     background-color: #339C5E!important;
 }
